--- a/assets/style.css
+++ b/assets/style.css
@@ -150,6 +150,10 @@ header {
 .dot_selected {
 	background-color: #fff;
 }
+
+.arrow {
+	cursor: pointer;
+  }
 /* Fin du code CSS pour le carousel */
 #banner p {
 	font-family: 'Roboto Slab', sans-serif;
